structur json for i18n

--- a/portail/client/src/assets/i18n/de.json
+++ b/portail/client/src/assets/i18n/de.json
@@ -1,170 +1,214 @@
-{"apiadresse.location":"Suche nach einem Ort...",
+{
+  "apiadresse.location": "Ort suchen...",
+  "main": {
+      "bug": "Fehler melden",
+      "permalink": "Permalink"
+  },
+  "button": {
+      "topics": "Themen",
+      "parameter": "Einstellungen",
+      "legend": "Legende"
+  },
+  "panel": {
+      "attributes": "Attribute",
+      "explanationtitle": "Wo anfangen?",
+      "explanation": "Wählen Sie eine oder mehrere Datenschichten im rechten Menü aus, zoomen Sie in ein Gebiet hinein und klicken Sie auf ein Objekt, um Informationen zu erhalten!",
+      "visibiltylayertitle": "Schicht auf dieser Auflösung nicht sichtbar",
+      "visibiltylayer": "Die Schicht ist auf dieser Auflösung nicht sichtbar",
+      "visibiltytable": "Attributtabelle nur für das sichtbare Gebiet",
+      "csvdownloadtitle": "CSV-Download",
+      "attrvalues": "Attributswerte",
+      "kmldownloadtitle": "KML-Download",
+      "zonekml": "Download des sichtbaren Gebiets",
+      "shpdownloadtitle": "Shapefile-Download",
+      "zoneshp": "Download des sichtbaren Gebiets",
+      "styledownloadtitle": "Stil-Download",
+      "styledownload": "Download des Stils im SLD-Format, Piktogramme sind nicht enthalten",
+      "geojsondownloadtitle": "GeoJSON-Visualisierung",
+      "parameters": "Kartenparameter",
+      "basemap": "Kartenhintergrund",
+      "transparency": "Transparenz"
+  },
 
-"main.bug":"Eine Anomalie melden",
-"main.permalink":"Permalink",
-"button.topics":"Thematischen",
-"button.parameter":"Parameter",
-"button.legend":"Legende",
-"panel.attributes":"Attribute",
+  "pois": "Interessante Orte",
+  "routes": "Routen & Wegleitungen",
+  "landuse": "Bebauung und Landnutzung",
+  "telecom": "Telekommunikation",
+  "myLayers": "Meine Schichten",
 
-"panel.explanationtitle":"Wie fange ich an?",
-"panel.explanation": "Wählen Sie eine oder mehrere Datenebenen im rechten Menü aus, zoomen Sie in ein Feld und klicken Sie dann auf ein Objekt, um Informationen zu erhalten!",
-"panel.visibiltylayertitle": "Ebene nicht sichtbar bei dieser Auflösung",
-"panel.visibiltylayer": "Die Ebene ist nicht sichtbar bei dieser Auflösung",
-"panel.visibiltytabletitle": "Nur Attributtabelle des angezeigten Bereichs",
-"panel.visibiltytable": "Attributtabelle nur des angezeigten Bereichs",
-"panel.attrvalues": "Attributive Werte",
-"panel.csvdownloadtitle" : "Download CSV",
-"panel.kmldownloadtitle": "Download KML",
-"panel.zonekml": "Nur der angezeigte Bereich herunterladen",
-"panel.shpdownloadtitle": "Download Shapefile",
-"panel.zoneshp": "Nur der angezeigte Bereich herunterladen",
-"panel.styledownloadtitle": "Download des Stils",
-"panel.styledownload": "Download des Stils im Sld-Format, Piktogramme sind nicht enthalten",
-"panel.geojsondownloadtitle": "Visualisierung des GeoJSON",
+  "magosm:hospitals_point": "Spitäler",
+  "magosm:clinics_point": "Kliniken",
+  "magosm:pharmacies_point": "Apotheken",
+  "magosm:social_facility_point": "Soziale Einrichtungen",
+  "magosm:police_point": "Polizei",
+  "magosm:shops_point": "Geschäfte",
+  "magosm:schools_point": "Schulen",
+  "magosm:motorways_line": "Autobahnen",
+  "magosm:highways_line": "Strassennetz",
+  "magosm:highways_line_recently_modified": "Kürzlich geänderte Strassen (seit 7 Tagen)",
+  "magosm:hiking_foot_routes_line": "Wanderwege",
+  "magosm:bicycle_mtb_routes_line": "Fahrradwege",
+  "magosm:cycleways_line": "Velowegen",
+  "magosm:bus_routes_line": "Buslinien",
+  "magosm:tram_ltr_routes_line": "Tramlinien",
+  "magosm:subway_routes_line": "U-Bahn-Linien",
+  "magosm:train_routes_line": "Zuglinien",
+  "magosm:railways_line": "Eisenbahnlinien",
+  "magosm:buildings_polygon": "Gebäude",
+  "magosm:proposed": "Bauvorhaben",
+  "magosm:constructions": "Bauarbeiten",
+  "magosm:landuses_naturals_polygon": "Landnutzung",
+  "magosm:pnr_polygon": "Regionale Naturpärke",
+  "magosm:vineyards_grapes_polygon": "Weinbau",
 
+  "geocaturl": {
+      "hospital": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
+      "clinics": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
+      "pharmacies": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
+      "social_facility": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
+      "police": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
+      "shops": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
+      "schools": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
+      "motorways": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
+      "highways": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+      "highways_recently_modified": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+      "hiking_foot_routes": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
+      "bicycle_mtb_routes": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
+      "cycleways": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
+      "bus_routes": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
+      "tram_ltr_routes": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
+      "subway_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
+      "train_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
+      "railways": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
+      "buildings": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
+      "proposed": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
+      "constructions": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
+      "landuses_naturals": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
+      "pnr": "https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
+      "vineyards_grapes": "https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard"
+  },
 
-"pois":"Sehenswürdigkeit",
+  "communes": "Gemeinden",
+  "cantons": "Kantone",
 
-"magosm:hospitals_point":"Spitäler",
-"magosm:clinics_point":"Kliniken",
-"magosm:pharmacies_point":"Apotheken",
-"magosm:social_facility_point":"Sozialen Einrichtungen",
-"magosm:police_point":"Polizei",
-"magosm:shops_point":"Geschäfte",
-"magosm:schools_point":"Schulen",
-
-"routes":"Routen und Strecken",
-
-"magosm:motorways_line":"Autobahnen",
-"magosm:highways_line":"Strassennetz",
-"magosm:highways_line_recently_modified":"Strassennetz geändert (t-7)",
-"magosm:hiking_foot_routes_line":"Wanderrouten",
-"magosm:bicycle_mtb_routes_line":"Radrouten",
-"magosm:cycleways_line":"Radwege",
-"magosm:bus_routes_line":"Buslinien",
-"magosm:tram_ltr_routes_line":"Strassenbahnlinien",
-"magosm:subway_routes_line":"U-Bahnlinien",
-"magosm:train_routes_line":"Bahnlinien",
-"magosm:railways_line":"Eisenbahnen",
-
-"landuse":"Gebäudegrundriss & Landnutzung",
-
-"magosm:buildings_polygon":"Gebäude",
-"magosm:proposed":"Konstruktionsvorschlag",
-"magosm:constructions":"Anlagen im Bau",
-"magosm:landuses_naturals_polygon":"Bodenbedeckung",
-"magosm:pnr_polygon":"Regionalen Naturparks",
-
-"telecom":"Telecom",
-
-"magosm:telecom_exchange_point":"Angeschlossenen Knoten",
-"magosm:telecom_fibre_connection_point":"Verteilerpunkte Faser",
-"magosm:telecom_copper_connection_point":"Verteilerpunkte Kupfer",
-"magosm:vineyards_grapes_polygon": "Weinberg",
-
-"myLayers":"Meine Layers",
-
-"geocaturl:hospital":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
-"geocaturl:clinics":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
-"geocaturl:pharmacies":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
-"geocaturl:social_facility":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
-"geocaturl:police":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
-"geocaturl:shops":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
-"geocaturl:schools":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
-
-"geocaturl:motorways":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
-"geocaturl:highways":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-"geocaturl:highways_recently_modified":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-"geocaturl:hiking_foot_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
-"geocaturl:bicycle_mtb_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
-"geocaturl:cycleways":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
-"geocaturl:bus_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
-
-
-"geocaturl:tram_ltr_routes":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
-"geocaturl:subway_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
-"geocaturl:train_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
-"geocaturl:railways":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
-
-
-"geocaturl:buildings":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
-"geocaturl:proposed":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
-"geocaturl:constructions":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
-"geocaturl:landuses_naturals":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
-"geocaturl:pnr":"https://www.geocat.ch/geonetwork/srv/ger/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
-
-
-"geocaturl:vineyards_grapes":"https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard",
-
-"communes": "Gemeinden",
-"cantons": "Kantone",
-
-
-"panel.parameters":"Karteneinstellungen",
-"panel.basemap":"Hintergrundkarte",
-"panel.transparency":"Transparenz",
-"change.info":"Informationen zum Objekt",
-"change.elements":"in der Nähe",
-"change.interval":"keine Veränderung des betrachteten Bereichs",
-"change.user":"Letzter Benutzer",
-"change.timestamp":"Letztes Mal",
-"change.changeset":"Letzte Änderungen und",
-"change.transitions":"Vorläufige Änderungen",
-"change.attributes":"Attribute opentreetmap",
-"change.key":"Schlüssel",
-"change.value":"Wert",
-"change.metadata":"Metadaten",
-"change.historic":"Geschichte des OSM-Objekts",
-"change_config.search":"Suche nach Änderungen",
-"change_config.time":"Zeitraum",
-"change_config.topic":"Thematisches Thema",
-"change_config.select_topic":"Wählen Sie ein Thema",
-"change_config.footprint":"Geografische Kontrolle",
-"change_config.zone":"Verschieben Sie auf der Karte, um den Suchbereich auszuwählen",
-"change_config.launch":"die Suche starten",
-"change_config.update":"Letzte Aktualisierung",
-"change_config.nochange":"Für diese Anfrage wurde keine Änderung gefunden.",
-"change_config.results":"Ergebnisse wurden gefunden",
-"change_config.size1":"die Grösse der Antwort",
-"change_config.size2":"ist wichtig und die Ergebnisse können schwer angezeigt werden.",
-"change_config.size3":"Sie können zoom in, um den Suchbereich zu reduzieren oder den Datumsbereich zu begrenzen, dann die Suche neu starten oder die Daten weiter laden.",
-"change_config.continue":"weiter",
-"change_config.expire1":"der Antrag abgelaufen ist. Es ist möglich, dass das Volumen der Änderungen zu wichtig ist.",
-"change_config.expire2":"Sie können zoom in, um den Suchbereich zu reduzieren oder den Datumsbereich zu begrenzen, dann die Suche neu starten.",
-"change_config.error":"Es tut mir leid, es gab einen Fehler.",
-"change_config.summary":"Zusammenfassung",
-"change_config.from":"de",
-"change_config.to":"bei",
-"change_config.category":"Kategorie",
-"change_config.number":"Anzahl der Unternehmen",
-"change_config.help":"die Hilfe sehen",
-"change_config.legende":"Legende",
-"change_config.select":"alle (de)Auswahl",
-"change_config.create":"Schöpfung",
-"change_config.add":"hinzugefügt",
-"change_config.modif_tag":"Änderung von Tags nur",
-"change_config.modif_geo":"Geometrie Modifikation nur",
-"change_config.remove":"Zurück zur Übersicht",
-"change_config.delete":"Löschung",
-"change_config.other":"andere",
-"change_config.tagandgeo":"Änderung von Tags und Geometrie",
-"change_config.heatmap":"Wärmekarte",
-"feature.website":"Web-Seiten",
-"feature.email":"E-Mail-Adresse",
-"feature.noinfo":"keine Informationen für das Objekt anzeigen",
-
-"attribute.nodata":"Keine Daten",
-"attribute.nberpage":"Anzahl der Elemente pro Seite",
-"attribute.gopage":"Gehe zu Seite :",
-"attribute.previouspage":"Vorherige Seite :",
-"attribute.nextpage":"Nächsten Seite :",
-"attribute.on":"von",
-"attribute.elements":"Elemente",
-
-"alert.display":"Der Layer kann auf dieser Ebene nicht angezeigt werden.",
-"alert.display2":"Zoomen Sie auf die Ebene",
-"alert.display3":"um die Windel zu sehen"
-
-
+  "layer": {
+      "bicycle_routes": "Fahrradwege",
+      "buildings": "Gebäude",
+      "bus_routes": "Buslinien",
+      "clinics": "Kliniken",
+      "cycleways": "Velowegen",
+      "hiking_routes": "Wanderwege",
+      "hospitals": "Spitäler",
+      "landuses": "Landnutzung",
+      "motorways": "Autobahnen",
+      "pharmacies": "Apotheken",
+      "pnr": "Regionale Naturpärke",
+      "police": "Polizei und Gendarmerie",
+      "railways": "Eisenbahnlinien",
+      "schools": "Schulen",
+      "shops": "Geschäfte",
+      "subway_routes": "U-Bahn-Linien",
+      "telecom_copper": "Kupfer-Nachverteilernetze",
+      "telecom_exchange": "Verkabelungsknoten",
+      "telecom_fibre": "Fibre-Mutualisierungsstellen",
+      "tram_routes": "Tramlinien",
+      "train_routes": "Zuglinien",
+      "social_amenities": "Soziale Einrichtungen",
+      "constructions": "Bauarbeiten",
+      "proposed": "Bauvorhaben"
+  },
+  "change": {
+      "info": "Informationen zum Objekt",
+      "elements": "Element(e) in der Nähe",
+      "interval": "Keine Änderungen im betrachteten Zeitraum",
+      "user": "Letzter Benutzer",
+      "timestamp": "Letzter Zeitstempel",
+      "changeset": "Letzter Changeset",
+      "transitions": "Zwischenschritte",
+      "attributes": "OpenStreetMap-Attribute",
+      "key": "Schlüssel",
+      "value": "Wert",
+      "metadata": "Metadaten",
+      "historic": "Historie des OSM-Objekts",
+      "version": "Version"
+  },
+  "change_config": {
+      "search": "Änderungen suchen",
+      "time": "Zeitraum",
+      "topic": "Thema",
+      "select_topic": "Wählen Sie ein Thema aus",
+      "footprint": "Geografischer Bereich",
+      "zone": "Bewegen Sie sich auf der Karte, um das Suchgebiet auszuwählen",
+      "launch": "Suche starten",
+      "update": "Letzte Aktualisierung am",
+      "nochange": "Es wurden keine Änderungen für diese Anfrage gefunden.",
+      "results": "Ergebnisse gefunden",
+      "size1": "Die Antwortgröße",
+      "size2": "ist groß und die Ergebnisse könnten schwer anzuzeigen sein.",
+      "size3": "Sie können hereinzoomen, um das Suchgebiet zu verkleinern oder den Datumsbereich einzuschränken, und dann die Suche erneut starten oder das Laden der Daten fortsetzen.",
+      "continue": "Fortfahren",
+      "expire1": "Die Anfrage ist abgelaufen. Möglicherweise ist das Änderungsvolumen zu groß.",
+      "expire2": "Sie können hereinzoomen, um das Suchgebiet zu verkleinern oder den Datumsbereich einzuschränken, und dann die Suche erneut starten.",
+      "error": "Entschuldigung, ein Fehler ist aufgetreten.",
+      "summary": "Zusammenfassung",
+      "from": "Von",
+      "to": "bis",
+      "category": "Kategorie",
+      "number": "Anzahl der Entitäten",
+      "url": "https://ch-osm.geodatasolutions.ch/changes-de",
+      "help": "Hilfe anzeigen",
+      "legende": "Legende",
+      "select": "Alle (de)selektieren",
+      "create": "Erstellung",
+      "add": "Hinzufügung",
+      "modif_tag": "Nur Tag-Modifikation",
+      "modif_geo": "Nur Geometrie-Modifikation",
+      "remove": "Entfernung",
+      "delete": "Löschung",
+      "other": "Sonstiges",
+      "tagandgeo": "Tag- und Geometrie-Modifikation",
+      "heatmap": "Wärmebild",
+      "geometry": "Geometrie des Objekts",
+      "new_geometry": "Neue Geometrie",
+      "old_geometry": "Alte Geometrie"
+  },
+  "attribute": {
+      "nodata": "Keine Daten",
+      "nberpage": "Anzahl der Elemente pro Seite",
+      "gopage": "Gehe zu Seite:",
+      "previouspage": "Vorherige Seite:",
+      "nextpage": "Nächste Seite:",
+      "on": "von",
+      "elements": "Elemente"
+  },
+  "alert": {
+      "display": "Schicht auf diesem Niveau nicht anzeigbar.",
+      "display2": "Vergrößern bis auf Niveau",
+      "display3": "um die Schicht zu sehen"
+  },
+  "days": {
+      "su": "So",
+      "mo": "Mo",
+      "tu": "Di",
+      "we": "Mi",
+      "th": "Do",
+      "fr": "Fr",
+      "sa": "Sa"
+  },
+  "months": {
+      "1": "Jan",
+      "2": "Feb",
+      "3": "Mär",
+      "4": "Apr",
+      "5": "Mai",
+      "6": "Jun",
+      "7": "Jul",
+      "8": "Aug",
+      "9": "Sep",
+      "10": "Okt",
+      "11": "Nov",
+      "12": "Dez"
+  },
+  "selectBeginDateTxt": "Wählen Sie das Startdatum",
+  "selectEndDateTxt": "Wählen Sie das Enddatum"
 }
