--- a/portail/client/src/assets/i18n/en.json
+++ b/portail/client/src/assets/i18n/en.json
@@ -1,178 +1,214 @@
 {
-    "apiadresse.location":"Search for a place...",
+  "apiaddress.location": "Search location...",
+  "main": {
+      "bug": "Report a bug",
+      "permalink": "Permalink"
+  },
+  "button": {
+      "topics": "Topics",
+      "parameter": "Settings",
+      "legend": "Legend"
+  },
+  "panel": {
+      "attributes": "Attributes",
+      "explanationtitle": "Where to start?",
+      "explanation": "Select one or more data layers from the right menu, zoom in on an area, and click on an object to get information!",
+      "visibiltylayertitle": "Layer not visible at this zoom level",
+      "visibiltylayer": "The layer is not visible at this zoom level",
+      "visibiltytable": "Attribute table only for the visible area",
+      "csvdownloadtitle": "CSV Download",
+      "attrvalues": "Attribute values",
+      "kmldownloadtitle": "KML Download",
+      "zonekml": "Download visible area",
+      "shpdownloadtitle": "Shapefile Download",
+      "zoneshp": "Download visible area",
+      "styledownloadtitle": "Style Download",
+      "styledownload": "Download style in SLD format, icons are not included",
+      "geojsondownloadtitle": "GeoJSON Visualization",
+      "parameters": "Map parameters",
+      "basemap": "Base map",
+      "transparency": "Transparency"
+  },
 
-    "main.bug":"Report a bug to Gitlab",
-    "main.permalink":"Permalink",
+  "pois": "Points of Interest",
+  "routes": "Routes & Directions",
+  "landuse": "Land Use",
+  "telecom": "Telecommunications",
+  "myLayers": "My Layers",
 
-    "button.topics":"Themes",
-    "button.parameter":"Parameters",
-    "button.legend":"Legend",
+  "magosm:hospitals_point": "Hospitals",
+  "magosm:clinics_point": "Clinics",
+  "magosm:pharmacies_point": "Pharmacies",
+  "magosm:social_facility_point": "Social Facilities",
+  "magosm:police_point": "Police",
+  "magosm:shops_point": "Shops",
+  "magosm:schools_point": "Schools",
+  "magosm:motorways_line": "Motorways",
+  "magosm:highways_line": "Road Network",
+  "magosm:highways_line_recently_modified": "Recently modified roads (last 7 days)",
+  "magosm:hiking_foot_routes_line": "Hiking Trails",
+  "magosm:bicycle_mtb_routes_line": "Bicycle Trails",
+  "magosm:cycleways_line": "Cycleways",
+  "magosm:bus_routes_line": "Bus Routes",
+  "magosm:tram_ltr_routes_line": "Tram Routes",
+  "magosm:subway_routes_line": "Subway Lines",
+  "magosm:train_routes_line": "Train Routes",
+  "magosm:railways_line": "Railways",
+  "magosm:buildings_polygon": "Buildings",
+  "magosm:proposed": "Proposed Construction",
+  "magosm:constructions": "Construction Works",
+  "magosm:landuses_naturals_polygon": "Land Use",
+  "magosm:pnr_polygon": "Regional Nature Parks",
+  "magosm:vineyards_grapes_polygon": "Vineyards",
 
+  "geocaturl": {
+      "hospital": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
+      "clinics": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
+      "pharmacies": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
+      "social_facility": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
+      "police": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
+      "shops": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
+      "schools": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
+      "motorways": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
+      "highways": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+      "highways_recently_modified": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+      "hiking_foot_routes": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
+      "bicycle_mtb_routes": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
+      "cycleways": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
+      "bus_routes": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
+      "tram_ltr_routes": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
+      "subway_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
+      "train_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
+      "railways": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
+      "buildings": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
+      "proposed": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
+      "constructions": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
+      "landuses_naturals": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
+      "pnr": "https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
+      "vineyards_grapes": "https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard"
+  },
 
-    "panel.explanationtitle":"How to start?",
-    "panel.explanation": "Select one or more data layers from the right menu, zoom to an area and then click on an object for information!",
-    "panel.visibiltylayertitle": "Layer not visible at this resolution",
-    "panel.visibiltylayer": "The layer is not visible at this resolution",
-    "panel.visibiltytabletitle": "Attribute table of the displayed area only",
-    "panel.visibiltytable": "Attribute table of the displayed area only",
-    "panel.attrvalues": "Attribute values",
-    "panel.csvdownloadtitle" : "Download CSV",
-    "panel.kmldownloadtitle": "Download KML",
-    "panel.zonekml": "Downloading the viewing area only",
-    "panel.shpdownloadtitle": "Download Shapefile",
-    "panel.zoneshp": "Downloading the viewing area only",
-    "panel.styledownloadtitle": "Download Style",
-    "panel.styledownload": "Download style in sld format, pictograms are not included",
-    "panel.geojsondownloadtitle": "View GeoJSON",
-
-    
-    "panel.attributes":"Attributes",
-
-
-    "pois":"Points of Interest",
-
-    "magosm:hospitals_point":"Hospitals",
-    "magosm:clinics_point":"Clinics",
-    "magosm:pharmacies_point":"Pharmacies",
-    "magosm:social_facility_point":"Social facilities",
-    "magosm:police_point":"Police",
-    "magosm:shops_point":"Shops",
-    "magosm:schools_point":"Schools",
-
-    "routes":"Routes & Itineraries",
-
-    "magosm:motorways_line":"Motorways",
-    "magosm:highways_line":"Highways",
-    "magosm:highways_line_recently_modified":"Highways modified (d-7)",
-    "magosm:hiking_foot_routes_line":"Hiking routes",
-    "magosm:bicycle_mtb_routes_line":"Bicycle routes",
-    "magosm:cycleways_line":"Cycleways",
-    "magosm:bus_routes_line":"Bus routes",
-    "magosm:tram_ltr_routes_line":"Tram routes",
-    "magosm:subway_routes_line":"Underground routes",
-    "magosm:train_routes_line":"train routes",
-    "magosm:railways_line":"Railways",
-
-    "landuse":"Buildings footprint & Landuse",
-
-    "magosm:buildings_polygon":"Buildings",
-    "magosm:proposed":"Construction proposals",
-    "magosm:constructions":"Constructions in progress",
-    "magosm:landuses_naturals_polygon":"Landuse",
-    "magosm:pnr_polygon":"Regional Nature Parks",
-
-    "telecom":"Telecom",
-
-    "magosm:telecom_exchange_point":"Excahnge point",
-    "magosm:telecom_fibre_connection_point":"Connection point Fibre",
-    "magosm:telecom_copper_connection_point":"Connection point Copper",
-    "magosm:vineyards_grapes_polygon": "Vineyards",
-
-    "myLayers":"My Layers",
-
-    "geocaturl:hospital":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
-    "geocaturl:clinics":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
-    "geocaturl:pharmacies":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
-    "geocaturl:social_facility":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
-    "geocaturl:police":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
-    "geocaturl:shops":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
-    "geocaturl:schools":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
-
-    "geocaturl:motorways":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
-    "geocaturl:highways":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-    "geocaturl:highways_recently_modified":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-    "geocaturl:hiking_foot_routes":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
-    "geocaturl:bicycle_mtb_routes":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
-    "geocaturl:cycleways":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
-    "geocaturl:bus_routes":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
-
-
-    "geocaturl:tram_ltr_routes":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
-    "geocaturl:subway_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
-    "geocaturl:train_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
-    "geocaturl:railways":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
-
-
-    "geocaturl:buildings":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
-    "geocaturl:proposed":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
-    "geocaturl:constructions":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
-    "geocaturl:landuses_naturals":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
-    "geocaturl:pnr":"https://www.geocat.ch/geonetwork/srv/eng/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
-
-
-    "geocaturl:vineyards_grapes":"https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard",
-   
-    "communes": "Municipalities",
-    "cantons": "Cantons",
-
-    "hostpials.surgeon":"Operator",
-
-
-    "panel.parameters":"Map settings",
-    "panel.basemap":"Basemap",
-    "panel.transparency":"Transparency",
-
-    "change.info":"Object information",
-    "change.elements":"Nearby element(s)",
-    "change.interval":"No change in the considered interval",
-    "change.user":"Last user",
-    "change.timestamp":"Last timestamp",
-    "change.changeset":"Last changes and",
-    "change.transitions":"Intermediate changeset(s)",
-    "change.attributes":"Openstreetmap Attributes",
-    "change.key":"key",
-    "change.value":"value",
-    "change.metadata":"Metadata",
-    "change.historic":"OSM object history",
-
-    "change_config.search":"Look for changes",
-    "change_config.time":"Period of time",
-    "change_config.topic":"Thematic",
-    "change_config.select_topic":"Select a theme",
-    "change_config.footprint":"Geographic footprint",
-    "change_config.zone":"Move on the map to select the search area",
-    "change_config.launch":"Start the search",
-    "change_config.update":"Last update on",
-    "change_config.nochange":"No change was found for this request.",
-    "change_config.results":"results have been found",
-    "change_config.size1":"The size of the response",
-    "change_config.size2":"is important and results may be heavy to display.",
-    "change_config.size3":"You can zoom in to reduce the search area or limit the date range, and then restart the search or continue loading the data.",
-    "change_config.continue":"Continue",
-    "change_config.expire1":"The request has expired. The volume of changes may be too large.",
-    "change_config.expire2":"You can zoom to narrow the search area or narrow the date range, and then restart the search.",
-    "change_config.error":"Sorry, an error has occurred.",
-    "change_config.summary":"Summary",
-    "change_config.from":"From",
-    "change_config.to":"to",
-    "change_config.category":"Category",
-    "change_config.number":"number of entities",
-
-    "change_config.help":"see help",
-    "change_config.legende":"Legend",
-    "change_config.select":"all (un)select",
-    "change_config.create":"creation",
-    "change_config.add":"added",
-    "change_config.modif_tag":"Tag(s) modification only",
-    "change_config.modif_geo":"Geometry modification only",
-    "change_config.remove":"Remove",
-    "change_config.delete":"Delete",
-    "change_config.other":"Other",
-    "change_config.tagandgeo":"Tag(s) and geometry modification",
-    "change_config.heatmap":"Heatmap",
-    "feature.website":"Website",
-    "feature.email":"E-mail address",
-    "feature.noinfo":"No information to display for the object",
-
-    "attribute.nodata":"No data",
-    "attribute.nberpage":"Number of items per page",
-    "attribute.gopage":"Go to page :",
-    "attribute.previouspage":"Previous page :",
-    "attribute.nextpage":"Next page :",
-    "attribute.on":"of",
-    "attribute.elements":"elements",
-
-    "alert.display":"Unable to display layer at this level.",
-    "alert.display2":"Zoom to the level",
-    "alert.display3":"to see the layer"
-    }
+  "communes": "Communes",
+  "cantons": "Cantons",
+  
+  "layer": {
+      "bicycle_routes": "Bicycle Routes",
+      "buildings": "Buildings",
+      "bus_routes": "Bus Routes",
+      "clinics": "Clinics",
+      "cycleways": "Cycleways",
+      "hiking_routes": "Hiking Trails",
+      "hospitals": "Hospitals",
+      "landuses": "Land Uses",
+      "motorways": "Motorways",
+      "pharmacies": "Pharmacies",
+      "pnr": "Regional Nature Parks",
+      "police": "Police and Gendarmerie",
+      "railways": "Railways",
+      "schools": "Schools",
+      "shops": "Shops",
+      "subway_routes": "Subway Lines",
+      "telecom_copper": "Copper Distribution Networks",
+      "telecom_exchange": "Network Nodes",
+      "telecom_fibre": "Fibre Mutualization Points",
+      "tram_routes": "Tram Routes",
+      "train_routes": "Train Routes",
+      "social_amenities": "Social Facilities",
+      "constructions": "Construction Works",
+      "proposed": "Proposed Construction"
+  },
+  "change": {
+      "info": "Object Information",
+      "elements": "Nearby Element(s)",
+      "interval": "No changes in the observed period",
+      "user": "Last User",
+      "timestamp": "Last Timestamp",
+      "changeset": "Last Changeset",
+      "transitions": "Transitions",
+      "attributes": "OpenStreetMap Attributes",
+      "key": "Key",
+      "value": "Value",
+      "metadata": "Metadata",
+      "historic": "OSM Object History",
+      "version": "Version"
+  },
+  "change_config": {
+      "search": "Search Changes",
+      "time": "Period",
+      "topic": "Topic",
+      "select_topic": "Select a Topic",
+      "footprint": "Geographical Area",
+      "zone": "Move on the map to select the search area",
+      "launch": "Start Search",
+      "update": "Last Update on",
+      "nochange": "No changes found for this request.",
+      "results": "Results Found",
+      "size1": "The response size",
+      "size2": "is large and results may be hard to display.",
+      "size3": "You can zoom in to reduce the search area or narrow the date range, then restart the search or continue loading the data.",
+      "continue": "Continue",
+      "expire1": "The request has expired. The change volume may be too large.",
+      "expire2": "You can zoom in to reduce the search area or narrow the date range, then restart the search.",
+      "error": "Sorry, an error occurred.",
+      "summary": "Summary",
+      "from": "From",
+      "to": "to",
+      "category": "Category",
+      "number": "Number of Entities",
+      "url": "https://ch-osm.geodatasolutions.ch/changes-en",
+      "help": "Show Help",
+      "legende": "Legend",
+      "select": "Select All (de)select",
+      "create": "Creation",
+      "add": "Addition",
+      "modif_tag": "Tag Modification Only",
+      "modif_geo": "Geometry Modification Only",
+      "remove": "Removal",
+      "delete": "Deletion",
+      "other": "Other",
+      "tagandgeo": "Tag and Geometry Modification",
+      "heatmap": "Heatmap",
+      "geometry": "Object Geometry",
+      "new_geometry": "New Geometry",
+      "old_geometry": "Old Geometry"
+  },
+  "attribute": {
+      "nodata": "No Data",
+      "nberpage": "Number of Elements per Page",
+      "gopage": "Go to Page:",
+      "previouspage": "Previous Page:",
+      "nextpage": "Next Page:",
+      "on": "of",
+      "elements": "Elements"
+  },
+  "alert": {
+      "display": "Layer not displayable at this level.",
+      "display2": "Zoom in to level",
+      "display3": "to view the layer"
+  },
+  "days": {
+      "su": "Su",
+      "mo": "Mo",
+      "tu": "Tu",
+      "we": "We",
+      "th": "Th",
+      "fr": "Fr",
+      "sa": "Sa"
+  },
+  "months": {
+      "1": "Jan",
+      "2": "Feb",
+      "3": "Mar",
+      "4": "Apr",
+      "5": "May",
+      "6": "Jun",
+      "7": "Jul",
+      "8": "Aug",
+      "9": "Sep",
+      "10": "Oct",
+      "11": "Nov",
+      "12": "Dec"
+  },
+  "selectBeginDateTxt": "Select Start Date",
+  "selectEndDateTxt": "Select End Date"
+}
