--- a/portail/client/src/assets/i18n/it.json
+++ b/portail/client/src/assets/i18n/it.json
@@ -1,171 +1,214 @@
 {
-    "apiadresse.location":"Ricerca di un luogo...",
+  "apiaddress.location": "Cerca posizione...",
+  "main": {
+      "bug": "Segnala un bug",
+      "permalink": "Collegamento permanente"
+  },
+  "button": {
+      "topics": "Argomenti",
+      "parameter": "Impostazioni",
+      "legend": "Legenda"
+  },
+  "panel": {
+      "attributes": "Attributi",
+      "explanationtitle": "Da dove iniziare?",
+      "explanation": "Seleziona uno o più livelli di dati dal menu a destra, ingrandisci un'area e clicca su un oggetto per ottenere informazioni!",
+      "visibiltylayertitle": "Livello non visibile a questo livello di zoom",
+      "visibiltylayer": "Il livello non è visibile a questo livello di zoom",
+      "visibiltytable": "Tabella attributi solo per l'area visibile",
+      "csvdownloadtitle": "Download CSV",
+      "attrvalues": "Valori attributi",
+      "kmldownloadtitle": "Download KML",
+      "zonekml": "Scarica area visibile",
+      "shpdownloadtitle": "Download Shapefile",
+      "zoneshp": "Scarica area visibile",
+      "styledownloadtitle": "Download Stile",
+      "styledownload": "Scarica stile in formato SLD, le icone non sono incluse",
+      "geojsondownloadtitle": "Visualizzazione GeoJSON",
+      "parameters": "Parametri della mappa",
+      "basemap": "Mappa base",
+      "transparency": "Trasparenza"
+  },
 
-    "main.bug":"Segnalare un'anomalia",
-    "main.permalink":"Permalink",
+  "pois": "Punti di Interesse",
+  "routes": "Percorsi e Direzioni",
+  "landuse": "Uso del Suolo",
+  "telecom": "Telecomunicazioni",
+  "myLayers": "I miei Livelli",
 
-    "button.topics":"Tematiche",
-    "button.parameter":"Parametri",
-    "button.legend":"Leggenda",
-    
-    "panel.attributes":"Attributi",
+  "magosm:hospitals_point": "Ospedali",
+  "magosm:clinics_point": "Cliniche",
+  "magosm:pharmacies_point": "Farmacie",
+  "magosm:social_facility_point": "Strutture Sociali",
+  "magosm:police_point": "Polizia",
+  "magosm:shops_point": "Negozi",
+  "magosm:schools_point": "Scuole",
+  "magosm:motorways_line": "Autostrade",
+  "magosm:highways_line": "Rete Stradale",
+  "magosm:highways_line_recently_modified": "Strade recentemente modificate (ultimi 7 giorni)",
+  "magosm:hiking_foot_routes_line": "Sentieri per Escursioni",
+  "magosm:bicycle_mtb_routes_line": "Percorsi MTB",
+  "magosm:cycleways_line": "Piste Ciclabili",
+  "magosm:bus_routes_line": "Percorsi Autobus",
+  "magosm:tram_ltr_routes_line": "Percorsi Tram",
+  "magosm:subway_routes_line": "Linee Metropolitana",
+  "magosm:train_routes_line": "Percorsi Ferroviari",
+  "magosm:railways_line": "Ferrovie",
+  "magosm:buildings_polygon": "Edifici",
+  "magosm:proposed": "Costruzioni Proposte",
+  "magosm:constructions": "Lavori di Costruzione",
+  "magosm:landuses_naturals_polygon": "Uso del Suolo",
+  "magosm:pnr_polygon": "Parchi Naturali Regionali",
+  "magosm:vineyards_grapes_polygon": "Vigneti",
 
-    "panel.explanationtitle":"Come posso iniziare?",
-    "panel.explanation": "Seleziona uno o più livelli di dati dal menu a destra, ingrandisci un'area e fai clic su un oggetto per ottenere informazioni!",
-    "panel.visibiltylayertitle": "Livello non visibile a questa risoluzione",
-    "panel.visibiltylayer": "Il livello non è visibile a questa risoluzione",
-    "panel.visibiltytabletitle": "Tabella attributiva dell'area visualizzata solo",
-    "panel.visibiltytable": "Tabella degli attributi solo dell'area visualizzata",
-    "panel.attrvalues": "Valori attributivi",
-    "panel.csvdownloadtitle" : "Download CSV",
-    "panel.kmldownloadtitle": "Download KML",
-    "panel.zonekml": "Solo download dell'area visualizzata",
-    "panel.shpdownloadtitle": "Download Shapefile",
-    "panel.zoneshp": "Solo download dell'area visualizzata",
-    "panel.styledownloadtitle": "Download dello stile",
-    "panel.styledownload": "Download lo stile in formato sld, i pictos non sono inclusi",
-    "panel.geojsondownloadtitle": "Visulizzazione del GeoJSON",
-    
+  "geocaturl": {
+      "hospital": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
+      "clinics": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
+      "pharmacies": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
+      "social_facility": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
+      "police": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
+      "shops": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
+      "schools": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
+      "motorways": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
+      "highways": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+      "highways_recently_modified": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+      "hiking_foot_routes": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
+      "bicycle_mtb_routes": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
+      "cycleways": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
+      "bus_routes": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
+      "tram_ltr_routes": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
+      "subway_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
+      "train_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
+      "railways": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
+      "buildings": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
+      "proposed": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
+      "constructions": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
+      "landuses_naturals": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
+      "pnr": "https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
+      "vineyards_grapes": "https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard"
+  },
 
-    "pois":"Punto di interesse",
+  "communes": "Comuni",
+  "cantons": "Cantoni",
 
-    "magosm:hospitals_point":"Ospedali",
-    "magosm:clinics_point":"Cliniche",
-    "magosm:pharmacies_point":"Farmacie",
-    "magosm:social_facility_point":"Strutture sociali",
-    "magosm:police_point":"Polizia",
-    "magosm:shops_point":"Negozi",
-    "magosm:schools_point":"Scuole",
-
-    "routes":"Rotte & Itinerari",
-
-    "magosm:motorways_line":"Autostrade",
-    "magosm:highways_line":"Rete stradale",
-    "magosm:highways_line_recently_modified":"Rotte modificate (g-7)",
-    "magosm:hiking_foot_routes_line":"Percorsi escursionistici",
-    "magosm:bicycle_mtb_routes_line":"Itinerario in bicicletta",
-    "magosm:cycleways_line":"Piste ciclabili",
-    "magosm:bus_routes_line":"Linee di autobus",
-    "magosm:tram_ltr_routes_line":"Linee di tram",
-    "magosm:subway_routes_line":"Linee della metropolitana",
-    "magosm:train_routes_line":"Linee ferroviarie",
-    "magosm:railways_line":"Ferrovie",
-
-    "landuse":"Edifici & occupazione del suolo",
-
-    "magosm:buildings_polygon":"Edifici",
-    "magosm:proposed":"Proposte di costruzione",
-    "magosm:constructions":"Costruzioni in corso",
-    "magosm:landuses_naturals_polygon":"Occupazione del suolo",
-    "magosm:pnr_polygon":"Parchi naturali regionali",
-
-    "telecom":"Telecom",
-
-    "magosm:telecom_exchange_point":"Snodo di raccordo",
-    "magosm:telecom_fibre_connection_point":"Punti di distribuzione Fibra",
-    "magosm:telecom_copper_connection_point":"Armadio di distribuzione rame",
-    "magosm:vineyards_grapes_polygon": "Vigneto",
-   
-    "myLayers":"Miei Layers",
-
-    "geocaturl:hospital":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
-    "geocaturl:clinics":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
-    "geocaturl:pharmacies":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
-    "geocaturl:social_facility":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
-    "geocaturl:police":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
-    "geocaturl:shops":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
-    "geocaturl:schools":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
-
-    "geocaturl:motorways":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
-    "geocaturl:highways":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-    "geocaturl:highways_recently_modified":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-    "geocaturl:hiking_foot_routes":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
-    "geocaturl:bicycle_mtb_routes":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
-    "geocaturl:cycleways":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
-    "geocaturl:bus_routes":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
-
-
-    "geocaturl:tram_ltr_routes":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
-    "geocaturl:subway_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
-    "geocaturl:train_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
-    "geocaturl:railways":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
-
-
-    "geocaturl:buildings":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
-    "geocaturl:proposed":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
-    "geocaturl:constructions":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
-    "geocaturl:landuses_naturals":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
-    "geocaturl:pnr":"https://www.geocat.ch/geonetwork/srv/ita/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
-
-
-    "geocaturl:vineyards_grapes":"https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard",
-
-    "communes": "Comuni",
-    "cantons": "Cantoni",
-
-    "panel.parameters":"Impostazioni della scheda",
-    "panel.basemap":"mappa di sfondo",
-    "panel.transparency":"trasparenza",
-    "change.info":"Informazioni sull'oggetto",
-    "change.elements":"elementi vicini",
-    "change.interval":"nessun cambiamento nell'intervallo considerato",
-    "change.user":"Ultimo utente",
-    "change.timestamp":"ultima prova",
-    "change.changeset":"ultimi cambiamenti e",
-    "change.transitions":"Variazione intermedia(i)",
-    "change.attributes":"attributi openstreetmap",
-    "change.key":"chiave",
-    "change.value":"valore",
-    "change.metadata":"Meta-data",
-    "change.historic":"storia dell'oggetto OSM",
-    "change_config.search":"ricerca di modifiche",
-    "change_config.time":"periodo",
-    "change_config.topic":"Tema tematico",
-    "change_config.select_topic":"selezionare un tema",
-    "change_config.footprint":"Controllo geografico",
-    "change_config.zone":"Spostare sulla mappa per selezionare l'area di ricerca",
-    "change_config.launch":"lanciare la ricerca",
-    "change_config.update":"ultimo aggiornamento",
-    "change_config.nochange":"non è stato trovato alcun cambiamento per questa richiesta.",
-    "change_config.results":"risultati sono stati trovati",
-    "change_config.size1":"la dimensione della risposta",
-    "change_config.size2":"è importante e i risultati possono essere pesanti da visualizzare.",
-    "change_config.size3":"è possibile ingrandire per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca o continuare a caricare i dati.",
-    "change_config.continue":"continuare",
-    "change_config.expire1":"la richiesta è scaduta. è possibile che il volume dei cambiamenti sia troppo importante.",
-    "change_config.expire2":"è possibile ingrandire per ridurre l'area di ricerca o limitare l'intervallo di date, quindi rilanciare la ricerca.",
-    "change_config.error":"Mi dispiace, c'e' stato un errore.",
-    "change_config.summary":"sintesi",
-    "change_config.from":"de la",
-    "change_config.to":"a",
-    "change_config.category":"Categoria",
-    "change_config.number":"numero di entità",
-    "change_config.help":"vedi l'aiuto",
-    "change_config.legende":"La leggenda",
-    "change_config.select":"tutto (de)selezionatore",
-    "change_config.create":"creazione",
-    "change_config.add":"aggiunto",
-    "change_config.modif_tag":"modifica del tag(s) solo",
-    "change_config.modif_geo":"modifica solo geometria",
-    "change_config.remove":"prelievo",
-    "change_config.delete":"cancellazione",
-    "change_config.other":"altri",
-    "change_config.tagandgeo":"modifica del tag(i) e della geometria",
-    "change_config.heatmap":"carta di calore",
-    "feature.website":"sito web",
-    "feature.email":"indirizzo e-mail",
-    "feature.noinfo":"nessuna informazione da visualizzare per l'oggetto",
-
-
-    "attribute.nodata":"Nessun dato",
-    "attribute.nberpage":"Numero di elementi per pagina",
-    "attribute.gopage":"Andare alla pagina :",
-    "attribute.previouspage":"Pagina precedente :",
-    "attribute.nextpage":"Pagina successiva :",
-    "attribute.on":"di",
-    "attribute.elements":"elementi",
-
-    "alert.display":"Impossibile visualizzare il strato a questo livello.",
-    "alert.display2":"Ingrandisci fino al livello",
-    "alert.display3":"per vedere il strato"
+  "layer":{
+    "bicycle_routes": "Itinéraires cyclables",
+    "buildings": "Bâtiments",
+    "bus_routes": "Itinéraires de bus",
+    "clinics": "Cliniques",
+    "cycleways": "Pistes cyclables",
+    "hiking_routes": "Itinéraires de randonnée",
+    "hospitals": "Hôpitaux",
+    "landuses": "Occupation du sol",
+    "motorways": "Autoroutes",
+    "pharmacies": "Pharmacies",
+    "pnr": "Parcs Naturels Régionaux",
+    "police": "Polices et Gendarmeries",
+    "railways": "Voies ferrées",
+    "schools": "Écoles",
+    "shops": "Magasins",
+    "subway_routes": "Itinéraires de métro",
+    "telecom_copper": "Sous-répartiteurs cuivre",
+    "telecom_exchange": "Noeuds de raccordement",
+    "telecom_fibre": "Points de mutualisation fibre",
+    "tram_routes": "Itinéraires de tramway",
+    "train_routes": "Itinéraires de train",
+    "social_amenities": "Structures sociales",
+    "constructions": "Constructions en cours",
+    "proposed": "Propositions de constructions"
+},
+"change": {
+    "info": "Informations sur l'objet",
+    "elements": "élément(s) à proximité",
+    "interval": "Aucun changement dans l'intervalle considéré",
+    "user": "Dernier utilisateur",
+    "timestamp": "Dernier timestamp",
+    "changeset": "Dernier changeset",
+    "transitions": "Changest(s) intermédiaire(s)",
+    "attributes": "Attributs OpenStreetMap",
+    "key": "clef",
+    "value": "valeur",
+    "metadata": "Méta-données",
+    "historic": "Historique de l'objet OSM",
+    "version": "Version"
+},
+"change_config": {
+    "search": "Rechercher des changements",
+    "time": "Période de temps",
+    "topic": "Thématique",
+    "select_topic": "Sélectionnez une thématique",
+    "footprint": "Emprise géographique",
+    "zone": "Déplacez-vous sur la carte pour sélectionner la zone de recherche",
+    "launch": "Lancer la recherche",
+    "update": "Dernière mise à jour le",
+    "nochange": "Aucun changement n'a été trouvé pour cette requête.",
+    "results": "résultats ont été trouvés",
+    "size1": "La taille de la réponse",
+    "size2": "est importante et les résultats risquent d'être lourds à afficher.",
+    "size3": "Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche ou poursuivre le chargement des données.",
+    "continue": "Poursuivre",
+    "expire1": "La requête a expiré. Il est possible que le volume de changements soit trop important.",
+    "expire2": "Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche.",
+    "error": "Désolé, une erreur s'est produite.",
+    "summary": "Récapitulatif",
+    "from": "De",
+    "to": "au",
+    "category": "Catégorie",
+    "number": "Nombre d'entités",
+    "url": "https://ch-osm.geodatasolutions.ch/changes-it",
+    "help": "Voir l'aide",
+    "legende": "Légende",
+    "select": "Tout (dé)selectionner",
+    "create": "Création",
+    "add": "Ajout",
+    "modif_tag": "Modification de tag(s) uniquement",
+    "modif_geo": "Modification de géométrie uniquement",
+    "remove": "Retrait",
+    "delete": "Suppression",
+    "other": "Autre",
+    "tagandgeo": "Modification de tag(s) et de géométrie",
+    "heatmap": "Carte de chaleur",
+    "geometry": "Géométrie de l'objet",
+    "new_geometry": "Nouvelle géométrie",
+    "old_geometry": "Ancienne géométrie"
+},
+"attribute": {
+    "nodata": "Pas de données",
+    "nberpage": "Nombre d'éléments par page",
+    "gopage": "Aller à la page :",
+    "previouspage": "Page précédente :",
+    "nextpage": "Page suivante :",
+    "on": "sur",
+    "elements": "éléments"
+},
+"alert": {
+    "display": "Impossible d'afficher la couche à ce niveau.",
+    "display2": "Zoomez jusqu'au niveau",
+    "display3": "pour voir la couche"
+},
+"days": {
+    "su": "Dim",
+    "mo": "Lun",
+    "tu": "Mar",
+    "we": "Mer",
+    "th": "Jeu",
+    "fr": "Ven",
+    "sa": "Sam"
+},
+"months": {
+    "1": "Jan",
+    "2": "Fév",
+    "3": "Mar",
+    "4": "Avr",
+    "5": "Mai",
+    "6": "Juin",
+    "7": "Juil",
+    "8": "Aoû",
+    "9": "Sep",
+    "10": "Oct",
+    "11": "Nov",
+    "12": "Déc"
+},
+"selectBeginDateTxt": "Choisir la date de début",
+"selectEndDateTxt": "Choisir la date de fin"
 }
