--- a/portail/client/src/assets/i18n/fr.json
+++ b/portail/client/src/assets/i18n/fr.json
@@ -1,167 +1,214 @@
 {
     "apiadresse.location": "Rechercher un lieu...",
+    "main": {
+        "bug": "Signaler une anomalie",
+        "permalink": "Permalien"
+    },
+    "button": {
+        "topics": "Thématiques",
+        "parameter": "Paramètres",
+        "legend": "Légende"
+    },
+    "panel": {
+        "attributes": "Attributs",
+        "explanationtitle": "Par où débuter?",
+        "explanation": "Sélectionnez une ou plusieurs couches de données dans le menu de droite, zoomez sur une zone puis cliquez sur un objet pour obtenir des informations !",
+        "visibiltylayertitle": "Couche non visible à cette résolution",
+        "visibiltylayer": "La couche n'est pas visible à cette résolution",
+        "visibiltytable": "Table attributaire de la zone visualisée uniquement",
+        "csvdownloadtitle": "Téléchargement CSV",
+        "attrvalues": "Valeurs attributaires",
+        "kmldownloadtitle": "Téléchargement KML",
+        "zonekml": "Téléchargement de la zone visualisée uniquement",
+        "shpdownloadtitle": "Téléchargement Shapefile",
+        "zoneshp": "Téléchargement de la zone visualisée uniquement",
+        "styledownloadtitle": "Téléchargement du style",
+        "styledownload": "Téléchargement du style au format sld, les pictos ne sont pas inclus",
+        "geojsondownloadtitle": "Visualisation du GeoJSON",
+        "parameters": "Paramètres de la carte",
+        "basemap": "Fond cartographique",
+        "transparency": "Transparence"
+    },
 
-   
-    "main.bug": "Signaler une anomalie",
-    "main.permalink": "Permalien",
-    "button.topics": "Thématiques",
-    "button.parameter": "Paramètres",
-    "button.legend": "Légende",
-
-    "panel.attributes":"Attributs",
-    
-    "panel.explanationtitle":"Par où débuter?",
-    "panel.explanation": "Sélectionnez une ou plusieurs couches de données dans le menu de droite, zoomez sur une zone puis cliquez sur un objet pour obtenir des information!",
-    "panel.visibiltylayertitle": "Couche non visible à cette résolution",
-    "panel.visibiltylayer": " La couche n'est pas visible à cette résolution",
-    "panel.visibiltytable": "Table attributaire de la zone visualisée uniquement",
-    "panel.csvdownloadtitle" : "Téléchargement CSV",
-    "panel.attrvalues": "Valeurs attributaires",
-    "panel.kmldownloadtitle": "Téléchargement KML",
-    "panel.zonekml": "Téléchargement de la zone visualisée uniquement",
-    "panel.shpdownloadtitle": "Téléchargement Shapefile",
-    "panel.zoneshp": "Téléchargement de la zone visualisée uniquement",
-    "panel.styledownloadtitle": "Téléchargement du style",
-    "panel.styledownload": "Téléchargement du style au format sld, les pictos ne sont pas inclus",
-    "panel.geojsondownloadtitle": "Visulalisation du GeoJSON",
-    
-    "pois":"Points d'intérêts",
-
-    "magosm:hospitals_point":"Hôpitaux",
-    "geocaturl:hospital":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
-    "magosm:clinics_point":"Cliniques",
-    "geocaturl:clinics":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
-    "magosm:pharmacies_point":"Pharmacies",
-    "geocaturl:pharmacies":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
-    "magosm:social_facility_point":"Structures sociales",
-    "geocaturl:social_facility":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
-    "magosm:police_point":"Police",
-    "geocaturl:police":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
-    "magosm:shops_point":"Magasins",
-    "geocaturl:shops":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
-    "magosm:schools_point":"Écoles",
-    "geocaturl:schools":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
-
+    "pois": "Points d'intérêts",
     "routes":"Routes & Itinéraires",
-
-    "magosm:motorways_line":"Autoroutes",
-    "geocaturl:motorways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
-    "magosm:highways_line":"Réseau routier",
-    "geocaturl:highways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-    "magosm:highways_line_recently_modified":"Routes modifiées (j-7)",
-    "geocaturl:highways_recently_modified":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
-    "magosm:hiking_foot_routes_line":"Itinéraires de randonnée",
-    "geocaturl:hiking_foot_routes":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
-    "magosm:bicycle_mtb_routes_line":"Itinéraires cyclables",
-    "geocaturl:bicycle_mtb_routes":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
-    "magosm:cycleways_line":"Pistes cyclables",
-    "geocaturl:cycleways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
-    "magosm:bus_routes_line":"Lignes de bus",
-    "geocaturl:bus_routes":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
-
-
-    "magosm:tram_ltr_routes_line":"Lignes de tramways",
-    "geocaturl:tram_ltr_routes":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
-    "magosm:subway_routes_line":"Lignes de métro",
-    "geocaturl:subway_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
-    "magosm:train_routes_line":"Lignes ferroviaires",
-    "geocaturl:train_routes":"https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
-    "magosm:railways_line":"Voies ferrées",
-    "geocaturl:railways":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
-
     "landuse":"Bâti et occupation des sols",
-
-    "magosm:buildings_polygon":"Bâtiments",
-    "geocaturl:buildings":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
-    "magosm:proposed":"Propositions de constructions",
-    "geocaturl:proposed":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
-    "magosm:constructions":"Constructions en cours",
-    "geocaturl:constructions":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
-    "magosm:landuses_naturals_polygon":"Occupation des sols",
-    "geocaturl:landuses_naturals":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
-    "magosm:pnr_polygon":"Parcs Naturels Régionaux",
-    "geocaturl:pnr":"https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
-
     "telecom":"Télécom",
-
+    "myLayers": "Mes Couches",
+    
+    "magosm:hospitals_point": "Hôpitaux",
+    "magosm:clinics_point": "Cliniques",
+    "magosm:pharmacies_point": "Pharmacies",
+    "magosm:social_facility_point": "Structures sociales",
+    "magosm:police_point": "Police",
+    "magosm:shops_point": "Magasins",
+    "magosm:schools_point": "Écoles",
+    "magosm:motorways_line": "Autoroutes",
+    "magosm:highways_line": "Réseau routier",
+    "magosm:highways_line_recently_modified": "Routes modifiées (j-7)",
+    "magosm:hiking_foot_routes_line": "Itinéraires de randonnée",
+    "magosm:bicycle_mtb_routes_line": "Itinéraires cyclables",
+    "magosm:cycleways_line": "Pistes cyclables",
+    "magosm:bus_routes_line": "Lignes de bus",
+    "magosm:tram_ltr_routes_line": "Lignes de tramways",
+    "magosm:subway_routes_line": "Lignes de métro",
+    "magosm:train_routes_line": "Lignes ferroviaires",
+    "magosm:railways_line": "Voies ferrées",
+    "magosm:buildings_polygon": "Bâtiments",
+    "magosm:proposed": "Propositions de constructions",
+    "magosm:constructions": "Constructions en cours",
+    "magosm:landuses_naturals_polygon": "Occupation des sols",
+    "magosm:pnr_polygon": "Parcs Naturels Régionaux",
     "magosm:vineyards_grapes_polygon": "Vignoble",
-    "geocaturl:vineyards_grapes":"https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard",
-   
-    "myLayers":"Mes Couches",
-  
+
+    "geocaturl": {
+        "hospital": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/69ee4b64-4e11-4729-8bd6-278a7e08071e",
+        "clinics": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/06d0fe8c-0ec3-43ba-acbf-939869d86713",
+        "pharmacies": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/5debe710-a205-4ddf-b998-3ca33da36042",
+        "social_facility": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/445d3a63-fd84-491f-aa2a-ad1efc39bf8e",
+        "police": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/e61082a5-6917-4826-938d-e79083817859",
+        "shops": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/1c3962ec-fabc-4301-aa52-a8edc81d5163",
+        "schools": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/0bdf8df3-9d13-499e-ab0b-aebf3fd217d9",
+        "motorways": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/9761dba0-c250-4d8d-bd16-60bfcfce9886",
+        "highways": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+        "highways_recently_modified": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/b78b987f-ce6a-461c-af88-6cae0a37c9aa",
+        "hiking_foot_routes": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/572df454-2d88-4cda-baa1-62cf83cd5d24",
+        "bicycle_mtb_routes": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/19459e9e-53fa-4970-af2d-8571920d34ba",
+        "cycleways": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/7c376405-cb03-40c3-8da2-9bce5df58667",
+        "bus_routes": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/f72e7450-202a-4509-9377-fc40bc73af61",
+        "tram_ltr_routes": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/81c0d9e2-4c6b-4643-a743-47e4e6a6d0f6",
+        "subway_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dsubway",
+        "train_routes": "https://wiki.openstreetmap.org/wiki/Tag:route%3Dtrain",
+        "railways": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/99734714-d49e-4f38-8e05-e8e4a529fd5a",
+        "buildings": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/4153ac4b-d8a9-4df3-a390-e766ed49a5bd",
+        "proposed": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/caa3cd7a-5923-4351-a65c-fd2fed4763b9",
+        "constructions": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/0526622f-98e1-480f-a9eb-91aa78ab58ec",
+        "landuses_naturals": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/urn:isogeo:metadata:uuid:6ffd6759-eddd-4077-87c4-be65f55d754d",
+        "pnr": "https://www.geocat.ch/geonetwork/srv/fre/catalog.search#/metadata/urn:isogeo:metadata:uuid:31d848b5-6900-4e36-85c9-a4f2b4990b16",
+        "vineyards_grapes": "https://wiki.openstreetmap.org/wiki/Tag:landuse%3Dvineyard"
+    },
+    
     "communes": "Communes",
     "cantons": "Cantons",
-
-    "panel.parameters":"Paramètres de la carte",
-    "panel.basemap":"Fond cartographique",
-    "panel.transparency":"Transparence",
-
-
-    "change.info":"Informations sur l'objet",
-    "change.elements":"élément(s) à proximité",
-    "change.interval":"Aucun changement dans l'intervalle considéré",
-    "change.user":"Dernier utilisateur",
-    "change.timestamp":"Dernier timestamp",
-    "change.changeset":"Dernier changeset",
-    "change.transitions":"Changest(s) intermédiaire(s)",
-    "change.attributes":"Attributs OpenStreetMap",
-    "change.key":"clef",
-    "change.value":"valeur",
-    "change.metadata":"Méta-données",
-    "change.historic":"Historique de l'objet OSM",
-
-
-    "change_config.search":"Rechercher des changements",
-    "change_config.time":"Période de temps",
-    "change_config.topic":"Thématique",
-    "change_config.select_topic":"Sélectionnez une thématique",
-    "change_config.footprint":"Emprise géographique",
-    "change_config.zone":"Déplacez-vous sur la carte pour sélectionner la zone de recherche",
-    "change_config.launch":"Lancer la recherche",
-    "change_config.update":"Dernière mise à jour le",
-    "change_config.nochange":"Aucun changement n'a été trouvé pour cette requête.",
-    "change_config.results":"résultats ont été trouvés",
-    "change_config.size1":"La taille de la réponse",
-    "change_config.size2":"est importante et les résultats risquent d'être lourds à afficher.",
-    "change_config.size3":"Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche ou poursuivre le chargement des données.",
-    "change_config.continue":"Poursuivre",
-    "change_config.expire1":"La requête a expiré. Il est possible que Le volume de changements soit trop important.",
-    "change_config.expire2":"Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche.",
-    "change_config.error":"Désolé, une erreur s'est produite.",
-    "change_config.summary":"Récapitulatif",
-    "change_config.from":"De",
-    "change_config.to":"au",
-    "change_config.category":"Catégorie",
-    "change_config.number":"Nombre d'entités",
-
-
-
-    "change_config.help":"Voir l'aide",
-    "change_config.legende":"Légende",
-    "change_config.select":"Tout (dé)selectionner",
-    "change_config.create":"Création",
-    "change_config.add":"Ajout",
-    "change_config.modif_tag":"Modification de tag(s) uniquement",
-    "change_config.modif_geo":"Modification de géométrie uniquement",
-    "change_config.remove":"Retrait",
-    "change_config.delete":"Suppression",
-    "change_config.other":"Autre",
-    "change_config.tagandgeo":"Modification de tag(s) et de géométrie",
-    "change_config.heatmap":"Carte de chaleur",
-
-    "feature.website":"Site web",
-    "feature.email":"Adresse e-mail",
-    "feature.noinfo":"Aucune information à afficher pour l'objet",
-
-    "attribute.nodata":"Pas de données",
-    "attribute.nberpage":"Nombre d'élément par page",
-    "attribute.gopage":"Aller à la page :",
-    "attribute.previouspage":"Page précédente :",
-    "attribute.nextpage":"Page suivante :",
-    "attribute.on":"sur",
-    "attribute.elements":"éléments",
-
-    "alert.display":"Impossible d'afficher la couche à ce niveau.",
-    "alert.display2":"Zoomez jusqu'au niveau",
-    "alert.display3":"pour voir la couche"
+    
+    "layer":{
+        "bicycle_routes": "Itinéraires cyclables",
+        "buildings": "Bâtiments",
+        "bus_routes": "Itinéraires de bus",
+        "clinics": "Cliniques",
+        "cycleways": "Pistes cyclables",
+        "hiking_routes": "Itinéraires de randonnée",
+        "hospitals": "Hôpitaux",
+        "landuses": "Occupation du sol",
+        "motorways": "Autoroutes",
+        "pharmacies": "Pharmacies",
+        "pnr": "Parcs Naturels Régionaux",
+        "police": "Polices et Gendarmeries",
+        "railways": "Voies ferrées",
+        "schools": "Écoles",
+        "shops": "Magasins",
+        "subway_routes": "Itinéraires de métro",
+        "telecom_copper": "Sous-répartiteurs cuivre",
+        "telecom_exchange": "Noeuds de raccordement",
+        "telecom_fibre": "Points de mutualisation fibre",
+        "tram_routes": "Itinéraires de tramway",
+        "train_routes": "Itinéraires de train",
+        "social_amenities": "Structures sociales",
+        "constructions": "Constructions en cours",
+        "proposed": "Propositions de constructions"
+    },
+    "change": {
+        "info": "Informations sur l'objet",
+        "elements": "élément(s) à proximité",
+        "interval": "Aucun changement dans l'intervalle considéré",
+        "user": "Dernier utilisateur",
+        "timestamp": "Dernier timestamp",
+        "changeset": "Dernier changeset",
+        "transitions": "Changest(s) intermédiaire(s)",
+        "attributes": "Attributs OpenStreetMap",
+        "key": "clef",
+        "value": "valeur",
+        "metadata": "Méta-données",
+        "historic": "Historique de l'objet OSM",
+        "version": "Version"
+    },
+    "change_config": {
+        "search": "Rechercher des changements",
+        "time": "Période de temps",
+        "topic": "Thématique",
+        "select_topic": "Sélectionnez une thématique",
+        "footprint": "Emprise géographique",
+        "zone": "Déplacez-vous sur la carte pour sélectionner la zone de recherche",
+        "launch": "Lancer la recherche",
+        "update": "Dernière mise à jour le",
+        "nochange": "Aucun changement n'a été trouvé pour cette requête.",
+        "results": "résultats ont été trouvés",
+        "size1": "La taille de la réponse",
+        "size2": "est importante et les résultats risquent d'être lourds à afficher.",
+        "size3": "Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche ou poursuivre le chargement des données.",
+        "continue": "Poursuivre",
+        "expire1": "La requête a expiré. Il est possible que le volume de changements soit trop important.",
+        "expire2": "Vous pouvez zoomer pour réduire la zone de recherche ou limiter la plage de dates, puis relancer la recherche.",
+        "error": "Désolé, une erreur s'est produite.",
+        "summary": "Récapitulatif",
+        "from": "De",
+        "to": "au",
+        "category": "Catégorie",
+        "number": "Nombre d'entités",
+        "url": "https://ch-osm.geodatasolutions.ch/changes-fr",
+        "help": "Voir l'aide",
+        "legende": "Légende",
+        "select": "Tout (dé)selectionner",
+        "create": "Création",
+        "add": "Ajout",
+        "modif_tag": "Modification de tag(s) uniquement",
+        "modif_geo": "Modification de géométrie uniquement",
+        "remove": "Retrait",
+        "delete": "Suppression",
+        "other": "Autre",
+        "tagandgeo": "Modification de tag(s) et de géométrie",
+        "heatmap": "Carte de chaleur",
+        "geometry": "Géométrie de l'objet",
+        "new_geometry": "Nouvelle géométrie",
+        "old_geometry": "Ancienne géométrie"
+    },
+    "attribute": {
+        "nodata": "Pas de données",
+        "nberpage": "Nombre d'éléments par page",
+        "gopage": "Aller à la page :",
+        "previouspage": "Page précédente :",
+        "nextpage": "Page suivante :",
+        "on": "sur",
+        "elements": "éléments"
+    },
+    "alert": {
+        "display": "Impossible d'afficher la couche à ce niveau.",
+        "display2": "Zoomez jusqu'au niveau",
+        "display3": "pour voir la couche"
+    },
+    "days": {
+        "su": "Dim",
+        "mo": "Lun",
+        "tu": "Mar",
+        "we": "Mer",
+        "th": "Jeu",
+        "fr": "Ven",
+        "sa": "Sam"
+    },
+    "months": {
+        "1": "Jan",
+        "2": "Fév",
+        "3": "Mar",
+        "4": "Avr",
+        "5": "Mai",
+        "6": "Juin",
+        "7": "Juil",
+        "8": "Aoû",
+        "9": "Sep",
+        "10": "Oct",
+        "11": "Nov",
+        "12": "Déc"
+    },
+    "selectBeginDateTxt": "Choisir la date de début",
+    "selectEndDateTxt": "Choisir la date de fin"
 }
